# accuracy-evaluation-cpp

./: CMakeLists.txt  README.md
pkgconfig/: pkgconfig.sample.in
src/: accuracy_evaluation_example.cpp  confusion.hpp  evaluation.hpp
